apps/headlamp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headlamp
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: headlamp
    app.kubernetes.io/part-of: headlamp
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/managed-by: kustomize
      app.kubernetes.io/name: headlamp
      app.kubernetes.io/part-of: headlamp
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: headlamp
        app.kubernetes.io/part-of: headlamp
    spec:
      serviceAccountName: headlamp
      containers:
        - name: headlamp
          image: ghcr.io/headlamp-k8s/headlamp:latest
          args:
            - "-in-cluster"
            - "-plugins-dir=/headlamp/plugins"
          ports:
            - name: http
              containerPort: 4466
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 256Mi
