apps/headlamp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: headlamp
    app.kubernetes.io/part-of: headlamp
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: headlamp
    app.kubernetes.io/part-of: headlamp
  ports:
    - name: http
      port: 80
      targetPort: 4466
      protocol: TCP
